[package]
name = "app-time"
version = "0.1.0"
edition = "2021"
include = ["/src"]

[dependencies]
ratatui = { version = "0.28.1", features = ["all-widgets"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation"] }
chrono = "0.4.38"
trayicon = "0.2.0"
auto-launch = "0.5.0"

[lib]
name = "common"
path = "src/lib.rs"
